filters:search filters on mobile padding on both sides in collapse

--- a/search.html
+++ b/search.html
@@ -94,7 +94,7 @@
         <div id="filter-collapse" class="collapse">
           <div>
             <h6 class="text-center font-weight-bold red m-1">CATEGORIES</h6>
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between px-5">
               <div class="checkbox">
                 <input id="m-check4" type="checkbox" value="New" name="condition">
                 <label class="mx-2" for="m-check4">Piano</label>
@@ -112,7 +112,7 @@
           </div>
           <div>
             <h6 class="text-center font-weight-bold red m-1">COMPANY</h6>
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between px-5">
               <div class="checkbox">
                 <input id="m-check1" type="checkbox" value="New" name="condition">
                 <label class="" for="m-check1">Zattix</label>
@@ -129,7 +129,7 @@
           </div>
           <div>
             <h6 class="text-center font-weight-bold red m-1">CONDITION</h6>
-            <div class="d-flex justify-content-around">
+            <div class="d-flex justify-content-around px-5">
               <div class="checkbox">
                 <input id="m-new" type="radio" value="New" name="condition">
                 <label class="" for="m-new">New</label>
