link:connected search page to home page

--- a/search.html
+++ b/search.html
@@ -32,7 +32,7 @@
       <div class="collapse navbar-collapse justify-content-between" id="navcol">
         <!-- nav bar center items -->
         <ul class="navbar-nav">
-          <li class="nav-item px-md-4  mx-xl-5  mx-lg-3"><a class="nav-link active" href="#"><i
+          <li class="nav-item px-md-4  mx-xl-5  mx-lg-3"><a class="nav-link active" href="index.html"><i
                 class="fa fa-home red"></i>&nbsp;<span class="red">HOME</span></a></li>
           <li class="nav-item dropdown px-md-2 mx-lg-2  mx-xl-5"><a class="dropdown-toggle nav-link"
               aria-expanded="false" data-toggle="dropdown" href="#"><i class="fa fa-th grey  mx-lg-3"></i>&nbsp;<span
