mobile:input location display none and height for select in jumbotron

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <div class="d-grid input-group mt-3">
           <!-- drop down -->
           <select name="category" class="drop-down card">
-            <option value="Piano text-center">Piano</option>
+            <option value="Piano">Piano</option>
             <option value="Violin">Violin</option>
             <option value="Drums">Drums</option>
           </select>
 
           <!-- other inputs -->
-          <input type="search" placeholder="Location" class="card">
+          <input type="search" placeholder="Location" class="card d-none d-md-block">
           <input type="search" placeholder="What are you searching for ?" class="card">
           <a href="search.html" class="button-charcoal btn-dark bg-charcoal text-light card">Search</a>
         </div>
