--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <main class="container-fluid p-0">
     <!-- top category info -->
     <div class="jumbotron mt-5 p-3 p-lg-3 mb-0 text-center">
-      <h1 class="text-light mt-lg-5">ZATTIX</h1>
+      <h1 class="text-light mt-3 mt-lg-5">ZATTIX</h1>
       <p class="text-light">Buying and Selling could not be simpler than this</p>
 
       <!-- input groups -->
@@ -65,9 +65,9 @@
       <div class="input-group mb-3">
         <div class="d-grid input-group mt-3">
           <!-- drop down -->
-          <select name="category" class="drop-down card">
+          <select name="category" class="card d-none d-md-block">
             <option value="Piano">Piano</option>
-            <option value="Violin">Violin</option>
+            <option value=" Violin">Violin</option>
             <option value="Drums">Drums</option>
           </select>
 
