--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </div>
     </section>
     <!-- main products section -->
-    <section class="container-fluid p-lg-5 bg-light product-section p-2">
+    <section class="container-fluid  bg-light product-section">
       <div class="product-heading">
         <a href="#">
           <h2 class="grey font-weight-bolder text-center border-bottom m-3">Piano</h2>
@@ -406,7 +406,7 @@
 
 
     </section>
-    <section class="container-fluid p-lg-5 bg-light product-section p-2">
+    <section class="container-fluid  bg-light product-section ">
       <div class="product-heading">
         <a href="#">
           <h2 class="grey font-weight-bolder text-center border-bottom m-3">Violin</h2>
@@ -633,7 +633,7 @@
       </div>
 
     </section>
-    <section class="container-fluid p-lg-5 bg-light product-section p-2">
+    <section class="container-fluid bg-light product-section ">
       <div class="product-heading">
         <a href="#">
           <h2 class="grey font-weight-bolder text-center border-bottom m-3">Drums</h2>
