product:fixed grid gap after 375px media query

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -225,7 +225,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -252,7 +252,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -279,7 +279,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -306,7 +306,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -333,7 +333,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -360,7 +360,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -387,7 +387,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple piano From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -427,7 +427,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -454,7 +454,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -481,7 +481,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -508,7 +508,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -535,7 +535,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -562,7 +562,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -589,7 +589,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -616,7 +616,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -654,7 +654,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -680,7 +680,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -706,7 +706,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -732,7 +732,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -758,7 +758,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -784,7 +784,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -810,7 +810,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
@@ -836,7 +836,7 @@
               <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
-            <div class="add-svg-container d-flex justify-content-between mt-3">
+            <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
                 <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
                   <path class="add-svg-path"
