product:card padding removed for all p in product cards

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
-              <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bolder mt-3">Zattix model x-230</h6>
+              <p class="pl-3 mb-0">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
@@ -222,8 +222,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
-              <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
+              <p class="pl-3 mb-0">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
@@ -249,8 +249,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
-              <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
+              <p class="pl-3 mb-0">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
@@ -276,8 +276,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
-              <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
+              <p class="pl-3 mb-0">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
@@ -303,8 +303,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
-              <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
+              <p class="pl-3 mb-0">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
@@ -330,8 +330,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
-              <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
+              <p class="pl-3 mb-0">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
@@ -357,8 +357,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
-              <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
+              <p class="pl-3 mb-0">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
@@ -384,8 +384,8 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
-              <p class="pl-3">A beautiful simple piano From Paris</p>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
+              <p class="pl-3 mb-0">A beautiful simple piano From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
               <a href="#">
@@ -424,7 +424,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -451,7 +451,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -478,7 +478,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -505,7 +505,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -532,7 +532,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -559,7 +559,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -586,7 +586,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -613,7 +613,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple violin From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -651,7 +651,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -677,7 +677,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -703,7 +703,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -729,7 +729,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -755,7 +755,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -781,7 +781,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -807,7 +807,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
@@ -833,7 +833,7 @@
           </div>
           <div class="product-card-bottom">
             <div>
-              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <h6 class="pl-3 red font-weight-bold mt-3">Zattix model x-230</h6>
               <p class="pl-3">A beautiful simple Drums set From Paris</p>
             </div>
             <div class="add-svg-container d-flex justify-content-between mt-1 mt-md-3">
